--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,7 @@ description = "Visualize network related data from PeeringDB"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black>=25.1.0",
+    "pylint>=3.3.8",
+    "requests>=2.32.4",
 ]
