--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
     ],
     "automerge": true,
     "rebaseWhen": "conflicted",
-    "recreateWhen": "always",
+    "recreateWhen": "auto",
     "lockFileMaintenance": {
         "enabled": true,
         "automerge": true
