feat: Implement Flask application for network data visualization and address linting issues
This commit introduces a Flask application to visualize network data from PeeringDB.

Key changes include:
- Added `app.py` with Flask routes for dashboard, network list, and analytics.
- Implemented API endpoints for network types, IPv4/IPv6 prefixes distribution, and IX/Facility correlation.
- Created HTML templates (`dashboard.html`, `networks.html`, `analytics.html`) for the web interface.
- Updated `pyproject.toml` and `uv.lock` to include Flask and its dependencies.
- Refined exception handling in `app.py` to catch specific `json.JSONDecodeError`.
- Added module docstring to `app.py` for improved code documentation.

--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,6 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": [
-        "config:recommended"
-    ],
+    "extends": ["config:recommended"],
     "automerge": true,
     "rebaseWhen": "conflicted",
     "recreateWhen": "auto",
@@ -12,9 +10,7 @@
     },
     "packageRules": [
         {
-            "matchManagers": [
-                "pep621"
-            ],
+            "matchManagers": ["pep621"],
             "automerge": true,
             "groupName": "Main dependencies",
             "matchPackageNames": [
@@ -40,17 +36,12 @@
             ],
             "automerge": true,
             "groupName": "Dev dependencies",
-            "addLabels": [
-                "dev-dependencies"
-            ]
+            "addLabels": ["dev-dependencies"]
         }
     ],
     "rangeStrategy": "bump",
     "separateMajorMinor": true,
-    "labels": [
-        "dependencies",
-        "python"
-    ],
+    "labels": ["dependencies", "python"],
     "platformAutomerge": true,
     "automergeType": "branch",
     "prHourlyLimit": 3,
