--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "black>=25.1.0",
+    "flask>=3.1.1",
     "pylint>=3.3.8",
     "requests>=2.32.4",
 ]
