--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "black>=25.1.0",
     "flask>=3.1.1",
+    "gunicorn>=23.0.0",
     "pylint>=3.3.8",
     "requests>=2.32.4",
 ]
