fix: Entrypoint of the Docker Image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
     netviz:
-        image: ghcr.io/crazyuploader/netviz:latest
+        build:
+            context: .
         volumes:
             - ./data:/app/data
         ports:
