chore: Update entrypoint of the Docker Image, and support for environment variables in Docker Compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
         ports:
             - "${HOST:-127.0.0.1}:8201:8201"
         restart: unless-stopped
+        environment:
+            - FLASK_ENV="${FLASK_ENV:-PRODUCTION}"
+            - PEERINGDB_API_KEY="${PEERINGDB_API_KEY}"
         logging:
             options:
                 max-size: 256m
