feat: Migrate code base to Rust

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,21 @@
-__pycache__
-.data
-.github
+target
 .git
 .venv
-data
-.prettierrc
-.gitignore
-.python-version
+__pycache__
 *.pyc
 *.pyo
 *.pyd
-.idea
-.vscode
-README.md
+.db
+.pytest_cache
+.coverage
+htmlcov
+dist
+build
+*.egg-info
+.DS_Store
+data/peeringdb/*.json
+!data/peeringdb/net.json
+node_modules
+.agent
+.gemini
+brain
