--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,22 @@
+# Core ignores for build context size and security
 target
 .git
-.venv
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.db
-.pytest_cache
-.coverage
-htmlcov
-dist
-build
-*.egg-info
+.env
+.github
+.circleci
+Dockerfile
+docker-compose.yml
+README.md
+renovate.json
+
+# System files
 .DS_Store
-data/peeringdb/*.json
-!data/peeringdb/net.json
-node_modules
+
+# Agent storage
 .agent
 .gemini
 brain
+
+# Ignore all data except net.json
+data
+!data/peeringdb/net.json
