--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,6 @@ version: 2.1
 
 # Define reusable commands
 commands:
-  install-rust:
-    description: "Install Rust toolchain"
-    steps:
-      - run:
-          name: Install Rust
-          command: |
-            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-            echo 'source $HOME/.cargo/env' >> $BASH_ENV
-
   restore-cargo-cache:
     description: "Restore cargo cache"
     steps:
@@ -34,26 +25,22 @@ commands:
 jobs:
   build:
     docker:
-      - image: cimg/base:stable
-    resource_class: medium
+      # Use the official CircleCI Rust convenience image
+      - image: cimg/rust:1.92
+    resource_class: large
     steps:
       - checkout
-      - install-rust
       - restore-cargo-cache
 
       # Check code formatting
       - run:
           name: Check formatting
-          command: |
-            rustup component add rustfmt
-            cargo fmt --all -- --check
+          command: cargo fmt --all -- --check
 
       # Run clippy (Rust linter)
       - run:
           name: Run clippy
-          command: |
-            rustup component add clippy
-            cargo clippy --all-targets --all-features -- -D warnings
+          command: cargo clippy --all-targets --all-features -- -D warnings
 
       # Build the project
       - run:
@@ -69,11 +56,10 @@ jobs:
 
   docs:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/rust:1.92
     resource_class: small
     steps:
       - checkout
-      - install-rust
       - restore-cargo-cache
       - run:
           name: Build documentation
@@ -82,7 +68,6 @@ jobs:
 
 # Define workflow
 workflows:
-  version: 2
   build-and-test:
     jobs:
       - build
