--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tower-http = { version = "0.5", features = ["fs", "trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 itertools = "0.14"
+thiserror = "2.0"
+anyhow = "1.0"
