--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,31 @@
 # CircleCI configuration for Rust CI
-# Runs on every push and pull request
 version: 2.1
 
-# Define reusable commands
 commands:
+  install-rust:
+    description: "Install Rust toolchain"
+    steps:
+      - run:
+          name: Install Rust
+          command: |
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            echo 'source $HOME/.cargo/env' >> $BASH_ENV
+            source $HOME/.cargo/env
+            rustup component add rustfmt clippy
+
   restore-cargo-cache:
     description: "Restore cargo cache"
     steps:
       - restore_cache:
           keys:
-            - cargo-{{ checksum ".circleci/config.yml" }}-{{ checksum "Cargo.lock" }}
-            - cargo-
+            - cargo-vm-{{ checksum "Cargo.lock" }}
+            - cargo-vm-
 
   save-cargo-cache:
     description: "Save cargo cache"
     steps:
       - save_cache:
-          key: cargo-{{ checksum ".circleci/config.yml" }}-{{ checksum "Cargo.lock" }}
+          key: cargo-vm-{{ checksum "Cargo.lock" }}
           paths:
             - ~/.cargo/registry
             - ~/.cargo/git
@@ -24,30 +33,26 @@ commands:
 
 jobs:
   build:
-    docker:
-      # Use the official CircleCI Rust convenience image
-      - image: cimg/rust:1.92
+    machine:
+      image: ubuntu-2404:current
     resource_class: large
     steps:
       - checkout
+      - install-rust
       - restore-cargo-cache
 
-      # Check code formatting
       - run:
           name: Check formatting
           command: cargo fmt --all -- --check
 
-      # Run clippy (Rust linter)
       - run:
           name: Run clippy
           command: cargo clippy --all-targets --all-features -- -D warnings
 
-      # Build the project
       - run:
           name: Build
           command: cargo build --release
 
-      # Run tests
       - run:
           name: Run tests
           command: cargo test --all-features
@@ -55,18 +60,18 @@ jobs:
       - save-cargo-cache
 
   docs:
-    docker:
-      - image: cimg/rust:1.92
-    resource_class: small
+    machine:
+      image: ubuntu-2404:current
+    resource_class: medium
     steps:
       - checkout
+      - install-rust
       - restore-cargo-cache
       - run:
           name: Build documentation
           command: cargo doc --no-deps
       - save-cargo-cache
 
-# Define workflow
 workflows:
   build-and-test:
     jobs:
