--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ axum = { version = "0.8", features = ["macros"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
 tera = "1.20"
 tower-http = { version = "0.5", features = ["fs", "trace"] }
 tracing = "0.1"
